--- a/action.yml
+++ b/action.yml
@@ -308,7 +308,7 @@ runs:
                         "### $($scriptFile.Fullname -replace [Regex]::Escape($env:GITHUB_WORKSPACE))" |
                             Out-File -Append -FilePath $env:GITHUB_STEP_SUMMARY
                     }
-                    $scriptCmd = $ExecutionContext.SessionState.InvokeCommand.GetCommand($scriptFile.FullName, 'ExternalScript')                
+                    $scriptCmd = $ExecutionContext.SessionState.InvokeCommand.GetCommand($scriptFile.FullName, 'ExternalScript')
                     foreach ($requiredModule in $CommandInfo.ScriptBlock.Ast.ScriptRequirements.RequiredModules) {
                         if ($requiredModule.Name -and 
                             (-not $requiredModule.MaximumVersion) -and
@@ -317,10 +317,12 @@ runs:
                             InstallActionModule $requiredModule.Name
                         }
                     }
+                    Push-Location $scriptFile.Directory.Fullname
                     $scriptFileOutputs = . $scriptCmd
                     $scriptFileOutputs |
                         . ProcessOutput  | 
                         Out-Host
+                    Pop-Location
                 }    
             
             $MyScriptFilesTook = [Datetime]::Now - $MyScriptFilesStart
